--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
         <title>UXUX</title>
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <link href="https:/style.css" rel="stylesheet" type="text/css"/>
+        <link href="ctyle.css" rel="stylesheet" type="text/css"/>
         <style>
             @media (min-width: 992px) {
                 html.w-mod-js:not(.w-mod-ix) [data-w-id="46408dc6-7459-b048-7f45-4fe9f799a30a"] {
