--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
                     ‍<br/>We &#x27;re not just going to sit aroun1the internet. We &#x27;re taking over your life.
                 </div>
                 <div class="buttons">
-                    <a href="https://telegram.org" class="link-block w-inline-block">
+                    <a href="https://t.me/uxuportal" class="link-block w-inline-block">
                         <img src="https://cdn.prod.website-files.com/668ad655166a899b5ecbbc3a/66c9f4bee9cc11d29a591153_Telegram%20(1).svg" loading="lazy" style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="da17ba6e-f2c9-4a5c-604e-1b9b231b59df" alt=""/>
                     </a>
-                    <a href="https://x.com/Knox_Solana" target="_blank" class="link-block w-inline-block">
+                    <a href="https://https://x.com/UXUX_SOLANA" target="_blank" class="link-block w-inline-block">
                         <img src="https://cdn.prod.website-files.com/668ad655166a899b5ecbbc3a/66c9f4beff6b7f7ba520a7d8_X%20(1).svg" loading="lazy" width="Auto" style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" alt="" data-w-id="a4f9e847-0ebe-fa70-c635-82a9814c231c"/>
                     </a>
                     <a href="https://www.dextools.io/app/en/pairs" class="link-block w-inline-block">
